--- a/04-deployment/homework/starter.ipynb
+++ b/04-deployment/homework/starter.ipynb
@@ -10,8 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scikit-learn==1.0.2\n",
-      "scikit-learn-intelex==2021.20210714.120553\n"
+      "scikit-learn==1.1.1\n"
      ]
     }
    ],
@@ -21,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0ef880a0",
    "metadata": {},
    "outputs": [],
@@ -32,10 +31,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7836ccfd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/raz/zoomcamp/mlops/env/lib/python3.8/site-packages/sklearn/base.py:329: UserWarning: Trying to unpickle estimator DictVectorizer from version 1.0.2 when using version 1.1.1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n",
+      "/home/raz/zoomcamp/mlops/env/lib/python3.8/site-packages/sklearn/base.py:329: UserWarning: Trying to unpickle estimator LinearRegression from version 1.0.2 when using version 1.1.1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "with open('model.bin', 'rb') as f_in:\n",
     "    dv, lr = pickle.load(f_in)"
@@ -43,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "41c08294",
    "metadata": {},
    "outputs": [],
@@ -52,30 +64,30 @@
     "\n",
     "def read_data(filename):\n",
     "    df = pd.read_parquet(filename)\n",
-    "    \n",
+    "\n",
     "    df['duration'] = df.dropOff_datetime - df.pickup_datetime\n",
     "    df['duration'] = df.duration.dt.total_seconds() / 60\n",
     "\n",
     "    df = df[(df.duration >= 1) & (df.duration <= 60)].copy()\n",
     "\n",
     "    df[categorical] = df[categorical].fillna(-1).astype('int').astype('str')\n",
-    "    \n",
+    "\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4854399a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = read_data('https://nyc-tlc.s3.amazonaws.com/trip+data/fhv_tripdata_????-??.parquet')"
+    "df = read_data('https://nyc-tlc.s3.amazonaws.com/trip+data/fhv_tripdata_2021-02.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "669fda0a",
    "metadata": {},
    "outputs": [],
@@ -84,11 +96,317 @@
     "X_val = dv.transform(dicts)\n",
     "y_pred = lr.predict(X_val)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4fb672f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16.191691679979066"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a42fcdf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year = 2021\n",
+    "month = 2\n",
+    "df['ride_id'] = f'{year:04d}/{month:02d}_' + df.index.astype('str')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "72ba4d6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dispatching_base_num</th>\n",
+       "      <th>pickup_datetime</th>\n",
+       "      <th>dropOff_datetime</th>\n",
+       "      <th>PUlocationID</th>\n",
+       "      <th>DOlocationID</th>\n",
+       "      <th>SR_Flag</th>\n",
+       "      <th>Affiliated_base_number</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>ride_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B00021</td>\n",
+       "      <td>2021-02-01 00:55:40</td>\n",
+       "      <td>2021-02-01 01:06:20</td>\n",
+       "      <td>173</td>\n",
+       "      <td>82</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B00021</td>\n",
+       "      <td>10.666667</td>\n",
+       "      <td>2021/02_1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>B00021</td>\n",
+       "      <td>2021-02-01 00:14:03</td>\n",
+       "      <td>2021-02-01 00:28:37</td>\n",
+       "      <td>173</td>\n",
+       "      <td>56</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B00021</td>\n",
+       "      <td>14.566667</td>\n",
+       "      <td>2021/02_2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>B00021</td>\n",
+       "      <td>2021-02-01 00:27:48</td>\n",
+       "      <td>2021-02-01 00:35:45</td>\n",
+       "      <td>82</td>\n",
+       "      <td>129</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B00021</td>\n",
+       "      <td>7.950000</td>\n",
+       "      <td>2021/02_3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>B00037</td>\n",
+       "      <td>2021-02-01 00:12:50</td>\n",
+       "      <td>2021-02-01 00:26:38</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>225</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B00037</td>\n",
+       "      <td>13.800000</td>\n",
+       "      <td>2021/02_4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>B00037</td>\n",
+       "      <td>2021-02-01 00:00:37</td>\n",
+       "      <td>2021-02-01 00:09:35</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>61</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B00037</td>\n",
+       "      <td>8.966667</td>\n",
+       "      <td>2021/02_5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1037687</th>\n",
+       "      <td>B03282</td>\n",
+       "      <td>2021-02-28 23:01:16</td>\n",
+       "      <td>2021-02-28 23:14:48</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B01717</td>\n",
+       "      <td>13.533333</td>\n",
+       "      <td>2021/02_1037687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1037688</th>\n",
+       "      <td>B03282</td>\n",
+       "      <td>2021-02-28 23:36:10</td>\n",
+       "      <td>2021-02-28 23:47:38</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>169</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B01717</td>\n",
+       "      <td>11.466667</td>\n",
+       "      <td>2021/02_1037688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1037689</th>\n",
+       "      <td>B03285</td>\n",
+       "      <td>2021-02-28 23:18:36</td>\n",
+       "      <td>2021-02-28 23:43:59</td>\n",
+       "      <td>28</td>\n",
+       "      <td>171</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B03285</td>\n",
+       "      <td>25.383333</td>\n",
+       "      <td>2021/02_1037689</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1037690</th>\n",
+       "      <td>B03285</td>\n",
+       "      <td>2021-02-28 23:26:34</td>\n",
+       "      <td>2021-02-28 23:44:37</td>\n",
+       "      <td>16</td>\n",
+       "      <td>252</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B03285</td>\n",
+       "      <td>18.050000</td>\n",
+       "      <td>2021/02_1037690</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1037691</th>\n",
+       "      <td>B03285</td>\n",
+       "      <td>2021-02-28 23:24:00</td>\n",
+       "      <td>2021-02-28 23:40:00</td>\n",
+       "      <td>171</td>\n",
+       "      <td>135</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B03285</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>2021/02_1037691</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>990113 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        dispatching_base_num     pickup_datetime    dropOff_datetime  \\\n",
+       "1            B00021          2021-02-01 00:55:40 2021-02-01 01:06:20   \n",
+       "2            B00021          2021-02-01 00:14:03 2021-02-01 00:28:37   \n",
+       "3            B00021          2021-02-01 00:27:48 2021-02-01 00:35:45   \n",
+       "4                     B00037 2021-02-01 00:12:50 2021-02-01 00:26:38   \n",
+       "5                     B00037 2021-02-01 00:00:37 2021-02-01 00:09:35   \n",
+       "...                      ...                 ...                 ...   \n",
+       "1037687               B03282 2021-02-28 23:01:16 2021-02-28 23:14:48   \n",
+       "1037688               B03282 2021-02-28 23:36:10 2021-02-28 23:47:38   \n",
+       "1037689      B03285          2021-02-28 23:18:36 2021-02-28 23:43:59   \n",
+       "1037690      B03285          2021-02-28 23:26:34 2021-02-28 23:44:37   \n",
+       "1037691      B03285          2021-02-28 23:24:00 2021-02-28 23:40:00   \n",
+       "\n",
+       "        PUlocationID DOlocationID  SR_Flag Affiliated_base_number   duration  \\\n",
+       "1                173           82      NaN        B00021           10.666667   \n",
+       "2                173           56      NaN        B00021           14.566667   \n",
+       "3                 82          129      NaN        B00021            7.950000   \n",
+       "4                 -1          225      NaN                 B00037  13.800000   \n",
+       "5                 -1           61      NaN                 B00037   8.966667   \n",
+       "...              ...          ...      ...                    ...        ...   \n",
+       "1037687           -1           31      NaN                 B01717  13.533333   \n",
+       "1037688           -1          169      NaN                 B01717  11.466667   \n",
+       "1037689           28          171      NaN        B03285           25.383333   \n",
+       "1037690           16          252      NaN        B03285           18.050000   \n",
+       "1037691          171          135      NaN        B03285           16.000000   \n",
+       "\n",
+       "                 ride_id  \n",
+       "1              2021/02_1  \n",
+       "2              2021/02_2  \n",
+       "3              2021/02_3  \n",
+       "4              2021/02_4  \n",
+       "5              2021/02_5  \n",
+       "...                  ...  \n",
+       "1037687  2021/02_1037687  \n",
+       "1037688  2021/02_1037688  \n",
+       "1037689  2021/02_1037689  \n",
+       "1037690  2021/02_1037690  \n",
+       "1037691  2021/02_1037691  \n",
+       "\n",
+       "[990113 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "bf11bfdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"predict\"] = y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "0ff8d505",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_result = df[[\"predict\", \"ride_id\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "639cd667",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file = \"fhv_tripdata_2021-02_with_ride_id_predict.parquet\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ec414eba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_result.to_parquet(\n",
+    "    output_file,\n",
+    "    engine='pyarrow',\n",
+    "    compression=None,\n",
+    "    index=False\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.10 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -102,7 +420,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "bd73fcd490d77dba291c777f2325bb5889cf68197ac39fd77dac03ec0481e2b7"
+   }
   }
  },
  "nbformat": 4,
